--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mistareas">
+    package="com.example.proyectofinalandroid">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
@@ -14,23 +14,23 @@
         android:roundIcon="@mipmap/icono_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity" >
+        <activity android:name="com.example.proyectofinalandroid.Main2Activity" >
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity">
+        <activity android:name="com.example.proyectofinalandroid.SplashActivity">
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".CreateLoginActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name="com.example.proyectofinalandroid.LoginActivity" />
+        <activity android:name="com.example.proyectofinalandroid.CreateLoginActivity" />
+        <activity android:name="com.example.proyectofinalandroid.MainActivity" />
     </application>
 
 </manifest>
