--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.mistareas"
+        applicationId "com.example.proyectofinalandroid"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
